syntax = "proto3";

option go_package = "example/movieSuggestion";

package msproto;

service MsDatabaseCrud{
    rpc CreateUser(NewUser) returns (User){}
    rpc GetAllMovies(EmptyMovie) returns (stream Movie){}
    rpc GetMovieByCategory(MovieCategory) returns (Movies){}
    rpc AddMovie(NewMovie) returns (Movie){}
    rpc DeleteMovie(Movie) returns (Movie){}
    rpc AddMovieToWatchlist(AddMovieByUser) returns (Movie){}
    rpc GetAllWatchlistMovies(EmptyMovie) returns (Movies){}
    rpc DeleteMovieFromWatchlist(Movie) returns (Movie){}
    rpc CreateReview(NewReview) returns (Review){}
    rpc UpdateReview(Review) returns (Review){}
}

message NewUser {
    string user_name = 1;
    string password = 2;
    string email = 3;
    string phone_number = 4;
    string address=5;
}

message User {
    uint64 id = 1;
    string user_name = 2;
    string password = 3;
    string email = 4;
    string phone_number = 5;
    string address=6;
}
message EmptyMovie {
}
message Movie {
    uint64 id = 1;
    string name = 2;
    string director = 3;
    string description = 4;
    uint64 rating = 5;
    string language = 6;
    string category = 7;
    string release_date = 8;
}
message NewMovie {
    string name = 1;
    string director = 2;
    string description = 3;
    uint64 rating = 4;
    string language = 5;
    string category = 6;
    string release_date = 7;
}
message MovieCategory{
    string category=1;
}
message Movies{
    repeated Movie movies=1;
}

message AddMovieByUser{
    uint64 user_id=1;
    uint64 movie_id=2;
}
message NewReview{
    uint64 rating =1;
    uint64 movie_id=2;
    uint64 user_id=3;
    string description=4;
}
message Review{
    uint64 id=1;
    uint64 rating =2;
    uint64 movie_id=3;
    uint64 user_id=4;
    string description=5;
}
